--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,19 +4,19 @@ body {
 }
 
 p {
-  font-weight: 300;
-  font-size: 18px;
+  font-size: 16px;
+  line-height: 1.6em;
 }
 
 h2 {
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-weight: 600;
   font-size: 30px;
   margin-bottom: 0.5em;
 }
 
 a {
-  color: hsla(0, 0%, 0%, 1);
+  color: #386BF3;
   font-weight: 400;
 }
 
@@ -24,24 +24,27 @@ a:hover {
   color: hsla(0, 100%, 100%, .6);
 }
 
+pre,
+code {
+  font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+}
+
 pre {
   font-size: 14px;
-  background-color: hsl(211, 20%, 96%);
-  border: 1px solid hsl(211, 20%, 91%);
+  background-color: hsl(210, 14.3%, 93.3%);
   border-radius: 4px;
-  box-shadow: inset 0 1px 2px hsl(211, 20%, 94%);
   padding: 1em;
   margin-top: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   width: 100%;
 }
 
 
 code {
-  padding: 2px 4px;
+  padding: 4px 6px;
   font-size: 90%;
-  color: #c7254e;
-  background-color: #f9f2f4;
+  color: hsl(0, 0%, 23.7%);
+  background-color: hsl(0, 0%, 94.9%);
   border-radius: 4px;
 }
 
@@ -60,31 +63,29 @@ pre code {
 
 /* Header */
 header {
-  text-align: center;
-  color: #f8f8f8;
-  background: hsla(0, 0%, 0%, 1);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-image: url('/1920/500');
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
-header .overlay {
-  padding-top: 125px;
-  padding-bottom: 125px;
-  background: hsla(0, 0%, 0%, 0.6);
+header .brand-icon {
+  position: relative;
+  width: 42px;
+  margin-right: 10px;
+  top: 7px;
 }
 
 header h1 {
-  font-family: 'Maven Pro', sans-serif;
-  font-weight: 400;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 600;
+  font-size: 42px;
+  display: inline-block;
+  margin: 0;
 }
 
 header h2 {
-  margin-top: 1em;
+  margin-top: .5em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
-  color: hsla(0, 100%, 100%, 0.6);
 }
 
 header a {
@@ -95,25 +96,36 @@ header a:hover {
   opacity: 0.6;
 }
 
-header img {
-  height: 4em;
-}
-
 /* Main content */
+.content-section-light,
+.content-section-dark {
+  padding: 100px 0;
+}
 
 .content-section-dark {
-  padding: 50px 0;
-  background: hsl(211, 20%, 97%);
+  background: #F4F7FC;
 }
 
-.content-section-light {
-  padding: 50px 0;
-  border-top: 1px solid hsl(211, 20%, 91%);
-  border-bottom: 1px solid hsl(211, 20%, 91%);
+.content-section-dark + .content-section-light {
+  padding-top: 150px;
 }
 
-.content-section-light a:hover, .content-section-dark a:hover, .content-section-images a:hover {
+.content-section-light a:hover, 
+.content-section-dark a:hover, 
+.content-section-images a:hover {
   color: hsla(0, 0%, 60%, 1);
+}
+
+.content-section-dark pre {
+  background: white;
+}
+
+/* Images */
+img.resize {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25),0 8px 16px -8px hsla(0, 0%, 0%, 0.3),0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
 }
 
 /* Wrapper for <pre> to make the <pre> field length the same as the content text */
@@ -126,6 +138,14 @@ header img {
   display: inline-block;
 }
 
+/* Custom Pre Code Box */
+
+pre.code-box {
+  box-shadow: 0 0 0 1px hsla(240, 30.1%, 28%, 0.05),0 2px 5px 0 hsla(240, 30.1%, 28%, 0.1),0 1px 1px 0 hsla(0, 0%, 0%, 0.07);
+  background: white;
+  padding: 18px;
+}
+
 /* Image gallery */
 .content-section-images {
   padding: 50px 0;
@@ -135,7 +155,8 @@ header img {
 footer {
   text-align: center;
   background: hsl(0, 0%, 0%);
-  padding: 50px 0;
+  padding: 100px 0;
+  margin-top: 100px;
 }
 
 footer p {
@@ -161,56 +182,42 @@ footer a {
 
 /* Carbon ads */
 #carbonads {
-  --width: 130px;
-}
-
-#carbonads {
   display: block;
   overflow: hidden;
   border-radius: 4px;
-  text-align: center;
-  box-shadow: 0 0 0 1px hsla(0, 0%, 0%, .1);
   font-size: 14px;
-}
-
-.carbon-text {
-  display: block;
-  padding: 0 0.5em 8px;
-  font-weight: 300;
+  padding: 20px;
+  max-width: 400px;
+  background: HSL(217.5, 57.1%, 97.3%);
+  max-height: 140px;
 }
 
 #carbonads a {
+  color: #333;
   text-decoration: none;
 }
 
 #carbonads span {
   position: relative;
-  display: block;
   overflow: hidden;
+}
+
+#carbonads img {
+  border-radius: 4px;
+  float: left;
+  margin-right: 10px;
 }
 
 .carbon-poweredby {
   text-transform: uppercase;
-  font-weight: 400;
-  font-size: 9px;
+  font-weight: 600;
+  font-size: 11px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   #carbonads {
-    width: var(--width);
-  }
-
-  .carbon-img {
-    display: block;
-    margin-bottom: 8px;
-    line-height: 1;
-  }
-
-  .carbon-img img {
-    display: block;
-    margin: 0 auto;
-    width: var(--width);
-    height: auto;
+    margin-top: -200px;
+    margin-left: 25px;
   }
 
   .carbon-poweredby {
@@ -219,33 +226,32 @@ footer a {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
   #carbonads {
-    margin-top: 20px;
-    padding: 1em;
-    line-height: 1.5;
-  }
-
-  .carbon-img {
-    float: left;
-    margin-right: 1em;
-  }
-
-  .carbon-img img {
-    display: block;
-    line-height: 1;
+    margin-top: -150px;
+    margin-left: 25px;
   }
 
   .carbon-poweredby {
-    position: absolute;
-    right: 0;
-    bottom: 0;
     display: block;
+    padding: 10px 12px;
+  }
+}
+
+@media (max-width: 1000px) {
+  header {
+    text-align: center;
   }
 
-  .carbon-text {
-    float: left;
-    max-width: calc(100% - var(--width) - 1em);
-    text-align: left;
+  #carbonads {
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
+  .carbon-poweredby {
+    display: block;
+    padding: 10px 12px;
   }
 }
